fix contrast in storefront

--- a/apps/storefront/components/Tokens/TokenColor/TokenColor.module.css
+++ b/apps/storefront/components/Tokens/TokenColor/TokenColor.module.css
@@ -6,6 +6,9 @@
   margin-top: -1px;
   border-radius: var(--ds-border-radius-md);
   border: none;
+}
+
+.color:is(button) {
   cursor: pointer;
 }
 
